--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -59,11 +59,12 @@ input{
 }
 
 body{
-    background: rgb(34,53,112);
-    background: linear-gradient(260deg, rgba(34,53,112,1) 0%, rgba(63,50,111,1) 100%, rgba(18,18,18,0.7875525210084033) 100%);
+    background: rgb(13,140,134);
+    background: linear-gradient(260deg, rgba(13,140,134,1) 0%, rgba(8,70,82,1) 100%, rgba(33,11,52,1) 100%);
 }
 
 table, td, th{
+    margin: auto;
     border-width: 3px;
     color: white;
     text-align: center;
@@ -116,6 +117,18 @@ a{
     background-color: rgb(1, 35, 58);
 }
 
+p{
+    color: white;
+}
+
+label{
+    color: white;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 select{
     border: 2px solid;
     width: auto;
@@ -144,8 +157,17 @@ div{
     border-bottom: none;
 }
 
+.echo{
+    border: none;
+    background-color: none;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #userprofile{
-    background-color: rgba(43, 135, 255, 0.342);
+    background-color: rgba(4, 99, 161, 0.747);
     display: block;
     border: solid;
     border-width: 3px;
@@ -161,6 +183,7 @@ div{
 
 fieldset{
     background-color: rgba(39, 39, 39, 0.521);
+    display: block;
     border-style:outset;
     border-radius: 20px;
     border-width: 5px;
